refactor(nexus/backend): redesign transfer orchestration and lifecycle
- add transfer dispatch and management services
- add group transfer orchestration flow
- split batch, directory and single transfer handling
- add transfer query service separation
- add transfer type enum
- remove legacy transfer sender structure
- clean up transfer dto and mapper structure

	new file:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/domain/enums/TransferType.java
	deleted:    beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/BatchAsyncSender.java
	modified:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/BatchSenderService.java
	new file:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/BatchTransferService.java
	deleted:    beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/DirectoryAsyncSender.java
	modified:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/DirectorySenderService.java
	new file:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/DirectoryTransferService.java
	deleted:    beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/FileTransferService.java
	new file:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/GroupTransferAsyncSender.java
	new file:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/GroupTransferContext.java
	new file:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/GroupTransferService.java
	modified:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/TransferAsyncSender.java
	new file:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/TransferDispatchService.java
	modified:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/TransferLogService.java
	new file:   beamlink-nexus/src/main/java/com/atamanahmet/beamlink/nexus/service/TransferManagementService.java
	new file:   beamlink-ne