@@ -4,16 +4,11 @@ import com.atamanahmet.beamlink.nexus.domain.TransferLog;
 import com.atamanahmet.beamlink.nexus.dto.LogSyncRequest;
 import com.atamanahmet.beamlink.nexus.dto.TransferStats;
 import com.atamanahmet.beamlink.nexus.repository.TransferLogRepository;
-
 import lombok.RequiredArgsConstructor;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -21,19 +16,16 @@ import java.time.Instant;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class TransferLogService {
-
-    private final Logger log = LoggerFactory.getLogger(TransferLogService.class);
 
     private final TransferLogRepository transferLogRepository;
 
     @Transactional
     public List<UUID> sync(UUID agentId, List<LogSyncRequest> incoming) {
-
         List<TransferLog> toSave = incoming.stream()
                 .filter(r -> r.getId() != null)
                 .filter(r -> !transferLogRepository.existsById(r.getId()))
@@ -45,9 +37,10 @@ public class TransferLogService {
                         .toAgentName(r.getToAgentName())
                         .filename(r.getFilename())
                         .fileSize(r.getFileSize())
+                        .averageSpeedMbps(r.getAverageSpeedMbps())
                         .timestamp(r.getTimestamp() != null ? r.getTimestamp() : Instant.now())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         if (!toSave.isEmpty()) {
             transferLogRepository.saveAll(toSave);
@@ -57,10 +50,10 @@ public class TransferLogService {
         return incoming.stream()
                 .map(LogSyncRequest::getId)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public void logTransfer(UUID fromAgentId, String fromAgentName, String filename, long fileSize) {
+    public void logTransfer(UUID fromAgentId, String fromAgentName, String filename, long fileSize, double averageSpeedMbps) {
         TransferLog entry = TransferLog.builder()
                 .id(UUID.randomUUID())
                 .fromAgentId(fromAgentId)
@@ -69,6 +62,7 @@ public class TransferLogService {
                 .toAgentName("Nexus")
                 .filename(filename)
                 .fileSize(fileSize)
+                .averageSpeedMbps(averageSpeedMbps)
                 .timestamp(Instant.now())
                 .build();
 
@@ -76,29 +70,22 @@ public class TransferLogService {
     }
 
     public List<TransferLog> getLogs(Pageable pageable) {
-
         Pageable sorted = PageRequest.of(
                 pageable.getPageNumber(),
                 pageable.getPageSize(),
-                Sort.by(Sort.Direction.DESC, "timestamp"));
-
+                Sort.by(Sort.Direction.DESC, "timestamp")
+        );
         return transferLogRepository.findAll(sorted).getContent();
     }
 
     public List<TransferLog> getRecentLogs(int limit) {
-
         return getLogs(PageRequest.of(0, limit));
     }
 
     public TransferStats getTransferStats() {
-
         long totalTransfers = transferLogRepository.count();
-
         Long totalSize = transferLogRepository.sumFileSize();
         long totalDataTransferred = totalSize != null ? totalSize : 0L;
-
-        return new TransferStats(
-                totalTransfers,
-                totalDataTransferred);
+        return new TransferStats(totalTransfers, totalDataTransferred);
     }
 }
